--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Desktop\\\\classes',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Anaconda3\\\\envs\\\\learn-env\\\\python36.zip',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Anaconda3\\\\envs\\\\learn-env\\\\DLLs',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Anaconda3\\\\envs\\\\learn-env\\\\lib',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Anaconda3\\\\envs\\\\learn-env',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Anaconda3\\\\envs\\\\learn-env\\\\lib\\\\site-packages',\n",
+       " 'C:\\\\Users\\\\Asus\\\\Anaconda3\\\\envs\\\\learn-env\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\Users\\\\Asus\\\\.ipython']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Driver class here"
+    "from driver import Driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Passenger class here"
+    "from passenger import Passenger"
    ]
   },
   {
@@ -67,12 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<passenger.Passenger object at 0x0000027DFFBD9DD8> <passenger.Passenger object at 0x0000027DFFBD9DA0>\n"
+     ]
+    }
+   ],
    "source": [
-    "meryl = None\n",
-    "daniel = None\n",
+    "meryl = Passenger()\n",
+    "daniel = Passenger()\n",
     "print(meryl, daniel)"
    ]
   },
@@ -85,11 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x0000027DFFBD9CF8>\n"
+     ]
+    }
+   ],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver()\n",
     "print(flatiron_taxi)"
    ]
   },
@@ -138,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
